Fix duplicate search results after equipment modification
Signed-off-by: TOURI ANIS <anis-1.touri@rte-france.com>